--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </p>
                         </div>
                         <div class="flex__item">
-                            <img src="./../img/image1.png">
+                            <img src="img/image1.png">
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="box4">
                     <div class="flex__item">
-                        <img src="./../img/image2.png">
+                        <img src="img/image2.png">
                     </div>
                     <div class="text flex__item">
                         <h2 class="ff-pd fs-m main-color">Created with care</h2>
